Finishing event section grid3

--- a/asset/styles/index.css
+++ b/asset/styles/index.css
@@ -29,7 +29,7 @@ body {
 }
 
 a::-moz-selection, h1::-moz-selection, h2::-moz-selection, h3::-moz-selection, h4::-moz-selection, h5::-moz-selection, h6::-moz-selection, p::-moz-selection, img::-moz-selection, span::-moz-selection, strong::-moz-selection, ul::-moz-selection, div::-moz-selection, button::-moz-selection, input::-moz-selection, option::-moz-selection {
-  background: rgb(209, 209, 209);
+  background: rgb(202, 202, 202);
 }
 
 a::selection,
@@ -48,7 +48,7 @@ div::selection,
 button::selection,
 input::selection,
 option::selection {
-  background: rgb(209, 209, 209);
+  background: rgb(202, 202, 202);
 }
 
 h2 {
@@ -249,7 +249,7 @@ main .section1 .s1-left-container .border div p {
   text-transform: uppercase;
   font-size: 0.9em;
   font-weight: 600;
-  color: rgb(209, 209, 209);
+  color: rgb(202, 202, 202);
   margin: 0;
   padding-bottom: 20px;
 }
@@ -352,7 +352,7 @@ main .section2 .menu .dishe {
 main .section2 .menu .dishe:after {
   content: "";
   position: absolute;
-  background-image: linear-gradient(90deg, rgb(209, 209, 209), rgb(209, 209, 209) 75%, transparent 75%, transparent 100%);
+  background-image: linear-gradient(90deg, rgb(202, 202, 202), rgb(202, 202, 202) 75%, transparent 75%, transparent 100%);
   background-size: 5px 1px;
   height: 1px;
   width: 420px;
@@ -557,7 +557,7 @@ main .booking .booking-right-container form div {
 main .booking .booking-right-container form div::after {
   content: "";
   position: absolute;
-  background: rgb(209, 209, 209);
+  background: rgb(202, 202, 202);
   height: 1px;
   width: 100%;
   transform: translateX(-50%);
@@ -637,19 +637,17 @@ main .section-event .section-event-container .event-img-container .event-img-gri
 main .section-event .section-event-container .event-img-container .event-img-grid-container div {
   background: #eeeeee;
 }
-main .section-event .section-event-container .event-img-container .event-img-grid-container .grid1 {
-  width: 100%;
-  display: grid;
-  grid-template-columns: 35% 65%;
-}
-main .section-event .section-event-container .event-img-container .event-img-grid-container .grid1 .event-bg1 {
+main .section-event .section-event-container .event-img-container .event-img-grid-container .event-bg1,
+main .section-event .section-event-container .event-img-container .event-img-grid-container .event-bg2 {
   overflow: hidden;
   position: relative;
 }
-main .section-event .section-event-container .event-img-container .event-img-grid-container .grid1 .event-bg1 img {
+main .section-event .section-event-container .event-img-container .event-img-grid-container .event-bg1 img,
+main .section-event .section-event-container .event-img-container .event-img-grid-container .event-bg2 img {
   height: 220px;
 }
-main .section-event .section-event-container .event-img-container .event-img-grid-container .grid1 .event-bg1 .july {
+main .section-event .section-event-container .event-img-container .event-img-grid-container .event-bg1 .july,
+main .section-event .section-event-container .event-img-container .event-img-grid-container .event-bg2 .july {
   position: absolute;
   transform: translate(-50%, -50%);
   top: 50%;
@@ -657,72 +655,111 @@ main .section-event .section-event-container .event-img-container .event-img-gri
   background: #21201e;
   padding: 20px 30px;
 }
-main .section-event .section-event-container .event-img-container .event-img-grid-container .grid1 .event-bg1 .july p {
+main .section-event .section-event-container .event-img-container .event-img-grid-container .event-bg1 .july p,
+main .section-event .section-event-container .event-img-container .event-img-grid-container .event-bg2 .july p {
   color: #eeeeee;
   font-family: Roboto, sans-serif;
 }
-main .section-event .section-event-container .event-img-container .event-img-grid-container .grid1 .event-bg1 .july p:first-child {
+main .section-event .section-event-container .event-img-container .event-img-grid-container .event-bg1 .july p:first-child,
+main .section-event .section-event-container .event-img-container .event-img-grid-container .event-bg2 .july p:first-child {
   font-size: 2em;
   font-weight: 600;
 }
-main .section-event .section-event-container .event-img-container .event-img-grid-container .grid1 .event-bg1 .july p:last-child {
-  font-size: 1.3em;
-}
-main .section-event .section-event-container .event-img-container .event-img-grid-container .grid1 .white-bg {
-  font-family: Roboto, sans-serif;
-}
-main .section-event .section-event-container .event-img-container .event-img-grid-container .grid1 .white-bg > p {
-  font-size: 1.5em;
-}
-main .section-event .section-event-container .event-img-container .event-img-grid-container .grid1 .white-bg div {
-  display: flex;
-}
-main .section-event .section-event-container .event-img-container .event-img-grid-container .grid1 .white-bg div div {
-  padding: 0 5px;
-}
-main .section-event .section-event-container .event-img-container .event-img-grid-container .grid1 .white-bg div div p {
+main .section-event .section-event-container .event-img-container .event-img-grid-container .event-bg1 .july p:last-child,
+main .section-event .section-event-container .event-img-container .event-img-grid-container .event-bg2 .july p:last-child {
   font-size: 1.2em;
-  padding: 0 5px;
 }
-main .section-event .section-event-container .event-img-container .event-img-grid-container .grid1 .white-bg a {
-  color: red;
+main .section-event .section-event-container .event-img-container .event-img-grid-container .grid1,
+main .section-event .section-event-container .event-img-container .event-img-grid-container .grid2 {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 35% 65%;
+}
+main .section-event .section-event-container .event-img-container .event-img-grid-container .white-bg {
+  font-family: Roboto, sans-serif;
+  text-align: left;
+  margin-left: 25px;
+}
+main .section-event .section-event-container .event-img-container .event-img-grid-container .white-bg > p {
+  font-size: 1.7em;
+  margin: 40px 0 0;
+  letter-spacing: 1px;
+}
+main .section-event .section-event-container .event-img-container .event-img-grid-container .white-bg div {
+  padding: 20px 0;
+  display: flex;
+  align-items: center;
+  color: rgb(202, 202, 202);
+}
+main .section-event .section-event-container .event-img-container .event-img-grid-container .white-bg div p {
+  font-size: 1.2em;
+  padding: 0 10px 0 5px;
+}
+main .section-event .section-event-container .event-img-container .event-img-grid-container .white-bg div a {
+  color: rgb(202, 202, 202);
+}
+main .section-event .section-event-container .event-img-container .event-img-grid-container .white-bg a {
+  color: #21201e;
+  font-size: 1.1em;
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: 1px;
 }
 main .section-event .section-event-container .event-img-container .event-img-grid-container .grid2 {
   grid-column: 1/2;
-  width: 100%;
-  display: grid;
-  grid-template-columns: 35% 65%;
-}
-main .section-event .section-event-container .event-img-container .event-img-grid-container .grid2 .event-bg2 {
-  overflow: hidden;
-  position: relative;
-}
-main .section-event .section-event-container .event-img-container .event-img-grid-container .grid2 .event-bg2 img {
-  height: 220px;
-}
-main .section-event .section-event-container .event-img-container .event-img-grid-container .grid2 .event-bg2 .july {
-  position: absolute;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50%;
-  background: #21201e;
-  padding: 20px 30px;
-}
-main .section-event .section-event-container .event-img-container .event-img-grid-container .grid2 .event-bg2 .july p {
-  color: #eeeeee;
-  font-family: Roboto, sans-serif;
-}
-main .section-event .section-event-container .event-img-container .event-img-grid-container .grid2 .event-bg2 .july p:first-child {
-  font-size: 2em;
-  font-weight: 600;
-}
-main .section-event .section-event-container .event-img-container .event-img-grid-container .grid2 .event-bg2 .july p:last-child {
-  font-size: 1.3em;
 }
 main .section-event .section-event-container .event-img-container .event-img-grid-container .grid3 {
   grid-column: 2/3;
   grid-row: -3/-1;
+  display: flex;
+  align-items: center;
+  background: url(/asset/img/event-03.jpg);
 }
-main .section5 .section5-container {
+main .section-event .section-event-container .event-img-container .event-img-grid-container .grid3 .white-bg {
+  width: 85%;
+  height: 85%;
+  margin: 0 auto;
+  position: relative;
+  text-align: center;
+}
+main .section-event .section-event-container .event-img-container .event-img-grid-container .grid3 .white-bg .july {
+  display: block;
+  margin: 0;
+  position: absolute;
+  transform: translateX(-50%);
+  top: 0;
+  left: 50%;
+  background: #21201e;
+  padding: 20px 30px;
+}
+main .section-event .section-event-container .event-img-container .event-img-grid-container .grid3 .white-bg .july p {
+  color: #eeeeee;
+  font-family: Roboto, sans-serif;
+}
+main .section-event .section-event-container .event-img-container .event-img-grid-container .grid3 .white-bg .july p:first-child {
+  font-size: 2em;
+  font-weight: 600;
+}
+main .section-event .section-event-container .event-img-container .event-img-grid-container .grid3 .white-bg .july p:last-child {
+  font-size: 1.2em;
+}
+main .section-event .section-event-container .event-img-container .event-img-grid-container .grid3 .white-bg .info {
+  display: block;
+  margin: 120px 0 0;
+}
+main .section-event .section-event-container .event-img-container .event-img-grid-container .grid3 .white-bg .info > p {
+  font-size: 1.6em;
+  letter-spacing: 1px;
+  color: #21201e;
+}
+main .section-event .section-event-container .event-img-container .event-img-grid-container .grid3 .white-bg .info div {
+  justify-content: center;
+}
+main .section-event .section-event-container .event-img-container .event-img-grid-container .grid3 .white-bg .info > a {
+  margin-top: 50px;
+  color: #21201e;
+}
+
+.section5 .section5-container {
   margin: 250px 0;
 }/*# sourceMappingURL=index.css.map */
